--- a/web/templates/entry_forms/profile.html
+++ b/web/templates/entry_forms/profile.html
@@ -171,7 +171,7 @@
             </div>
         </div>
         
-        <div class="form-row-full">
+        <div class="form-row">
             <div class="form-group">
                 <label for="preferred_contact">Preferred Contact Method</label>
                 <select id="preferred_contact" name="preferred_contact">
