--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -199,7 +199,7 @@
                     <a href="{% if client.contact_type == 'text' %}sms:{% else %}tel:{% endif %}{{ client.display_phone }}" 
                        class="contact-link {{ 'preferred' if client.preferred_contact in ['call_cell', 'call_home', 'call_work', 'text'] else '' }}" 
                        onclick="event.stopPropagation()">
-                        {{ client.contact_icon|safe }} <span>{{ client.display_phone }}{% if client.ok_to_leave_message == 'no' %} <i data-lucide="alert-triangle" style="width: 14px; height: 14px; vertical-align: middle; color: #D97706;"></i>{% endif %}</span>
+                        {{ client.contact_icon|safe }} <span>{{ client.display_phone }}</span>{% if client.ok_to_leave_message == 'no' %} <i data-lucide="alert-triangle" style="width: 14px; height: 14px; vertical-align: middle; color: #D97706;"></i>{% endif %}
                     </a>
                     {% endif %}
                 </div>
@@ -229,7 +229,7 @@
                     <a href="{% if client.contact_type == 'text' %}sms:{% else %}tel:{% endif %}{{ client.display_phone }}" 
                        class="contact-link {{ 'preferred' if client.preferred_contact in ['call_cell', 'call_home', 'call_work', 'text'] else '' }}" 
                        onclick="event.stopPropagation()">
-                        {{ client.contact_icon|safe }} <span>{{ client.display_phone }}{% if client.ok_to_leave_message == 'no' %} <i data-lucide="alert-triangle" style="width: 14px; height: 14px; vertical-align: middle; color: #D97706;"></i>{% endif %}</span>
+                        {{ client.contact_icon|safe }} <span>{{ client.display_phone }}</span>{% if client.ok_to_leave_message == 'no' %} <i data-lucide="alert-triangle" style="width: 14px; height: 14px; vertical-align: middle; color: #D97706;"></i>{% endif %}
                     </a>
                     {% endif %}
                 </div>
