Fix client_file search clearing on page load
client_file.html:
- Added autocomplete=off to search input

client_file.js:
- Removed sessionStorage persistence for search term
- Search now clears on page load instead of restoring previous term

--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -233,7 +233,8 @@
             <span class="search-icon"><i data-lucide="search"></i></span>
             <input type="text" 
                 id="entry-search" 
-                placeholder="Search entries...">
+                placeholder="Search entries..."
+                autocomplete="off">
             <button type="button" 
                     id="clear-entry-search" 
                     class="clear-search"><i data-lucide="x"></i></button>
