--- a/web/templates/manage_types.html
+++ b/web/templates/manage_types.html
@@ -187,7 +187,7 @@
                     </span>
                 </td>
                 <td style="text-align: center;">
-                    <span class="locked-indicator">🔒 LOCKED</span>
+                    <span class="locked-indicator"><i data-lucide="lock" style="width: 12px; height: 12px; vertical-align: middle; margin-right: 0.25rem;"></i>LOCKED</span>
                 </td>
             </tr>
             {% endfor %}
@@ -219,7 +219,7 @@
                     </span>
                 </td>
                 <td style="text-align: center;">
-                    <span class="locked-indicator" style="background: #D1FAE5; color: #065F46;">✓ EDITABLE</span>
+                    <span class="locked-indicator" style="background: #D1FAE5; color: #065F46;"><i data-lucide="check" style="width: 12px; height: 12px; vertical-align: middle; margin-right: 0.25rem;"></i>EDITABLE</span>
                 </td>
             </tr>
             {% endfor %}
