--- a/web/static/css/add_edit_link_group.css
+++ b/web/static/css/add_edit_link_group.css
@@ -182,10 +182,11 @@
     color: #DC2626;
     border: none;
     border-radius: 50%;
-    font-size: 1.25rem;
-    line-height: 1;
     cursor: pointer;
     transition: background 0.2s;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .remove-client:hover {
